--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -4,7 +4,7 @@ services:
 ###> doctrine/doctrine-bundle ###
   database:
     ports:
-      - "5432"
+      - "${MYSQL_PORT:-33061}:3306"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
