--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -13,8 +13,9 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
 
-    #esi: true
-    #fragments: true
+    esi: true
+    fragments: true
+
     php_errors:
         log: true
 
