--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,29 +1,76 @@
+imports:
+    - { resource: '@SfsCmsBundle/config/security/admin_role_hierarchy.yaml' }
+    - { resource: '@SfsMediaBundle/config/security/admin_role_hierarchy.yaml' }
+    - { resource: '@SfsUserBundle/config/security/admin_role_hierarchy.yaml' }
+
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        sfs_user:
+            id: sfs_user.user_provider
+
+    access_decision_manager:
+        strategy: unanimous
+        allow_if_all_abstain: false
+
+    role_hierarchy:
+        ROLE_ADMIN:
+            - ROLE_ADMIN_USERS_RW
+            - ROLE_ADMIN_INVITATION_RO
+            - ROLE_ALLOWED_TO_SWITCH
+            - ROLE_ADMIN_ADMINISTRATORS_RW
+            - ROLE_SFS_MEDIA_ADMIN_MEDIAS_RW
+            - ROLE_SFS_CMS_ADMIN_BLOCKS_RW
+            - ROLE_SFS_CMS_ADMIN_CONTENTS_RW
+            - ROLE_SFS_CMS_ADMIN_ROUTES_RW
+            - ROLE_SFS_CMS_ADMIN_MENUS_RW
+            - ROLE_SFS_CMS_ADMIN_SITES_RO
+        ROLE_SUPER_ADMIN:
+            - ROLE_ADMIN
+            - ROLE_ADMIN_ADMINISTRATORS_PROMOTE_SUPER
+            - ROLE_ADMIN_ADMINISTRATORS_DEMOTE_SUPER
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
+            pattern: ^/(admin|app)/
             lazy: true
-            provider: users_in_memory
+            provider: sfs_user
+            form_login:
+                provider: sfs_user
+                login_path: sfs_user_login
+                check_path: sfs_user_login_check
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+            login_throttling:
+                max_attempts: 5
+                interval: '1 minute'
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            remember_me:
+                secret: "%env(APP_SECRET)%"
+                lifetime: 2592000 # 1 month
+                secure: true
+                httponly: true
+                always_remember_me: false
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+            logout:
+                path: sfs_user_logout
+
+            switch_user:
+                role: ROLE_ALLOWED_TO_SWITCH
+                parameter: _switch_user
+
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/invitation, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/reset-password, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/navbar-user, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
