--- a/config/packages/sfs_cms.yaml
+++ b/config/packages/sfs_cms.yaml
@@ -5,3 +5,7 @@ sfs_cms:
     site:
         identification: "domain"
         throw_not_found: false
+
+sfs_cms_blog:
+    author:
+        class: App\Entity\User
