--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/orm": "^2.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
+        "softspring/cms-blog-plugin": "^5.2@dev",
+        "softspring/cms-translation-plugin": "^5.2@dev",
         "softspring/sfs-builder": "^5.2@dev",
         "softspring/user-bundle": "^5.2@dev",
         "symfony/asset": "6.4.*",
