--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
         "doctrine/persistence": "^3.2",
+        "monolog/monolog": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "softspring/cms-blog-plugin": "^5.2@dev",
@@ -32,7 +33,7 @@
         "symfony/intl": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/mime": "6.4.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/notifier": "6.4.*",
         "symfony/process": "6.4.*",
         "symfony/property-access": "6.4.*",
