--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "softspring/sfs-builder-standalone",
-    "description": "SFS Builder Standalone",
+    "name": "softspring/symfonic-standalone",
+    "description": "Symfonic Standalone",
     "type": "project",
     "license": "MIT",
     "minimum-stability": "dev",
@@ -17,10 +17,10 @@
         "monolog/monolog": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
-        "softspring/cms-blog-plugin": "^5.2@dev",
-        "softspring/cms-translation-plugin": "^5.2@dev",
-        "softspring/sfs-builder": "^5.2@dev",
-        "softspring/user-bundle": "^5.2@dev",
+        "softspring/cms-blog-plugin": "^5.2",
+        "softspring/cms-translation-plugin": "^5.2",
+        "softspring/symfonic": "^5.2",
+        "softspring/user-bundle": "^5.2",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/doctrine-messenger": "6.4.*",
