--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@softspring/cms-module-collection": "file:vendor/softspring/cms-module-collection/assets",
         "@softspring/media-bundle": "file:vendor/softspring/media-bundle/assets",
         "@softspring/polymorphic-form-type": "file:vendor/softspring/polymorphic-form-type/assets",
+        "@softspring/collection-form-type": "file:vendor/softspring/collection-form-type/assets",
         "@symfony/webpack-encore": "^4.6.1",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.11.2",
