--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "ext-iconv": "*",
         "ext-mysqli": "*",
         "doctrine/annotations": "^2.0",
-        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.3",
         "doctrine/persistence": "^3.2",
@@ -19,8 +19,10 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "softspring/cms-blog-plugin": "^5.4@dev",
+        "softspring/cms-bundle": "^5.4@dev",
         "softspring/cms-translation-plugin": "^5.4@dev",
         "softspring/symfonic": "^5.4@dev",
+        "softspring/translatable-bundle": "^5.4@dev",
         "softspring/user-bundle": "^5.4@dev",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
