--- a/composer.json
+++ b/composer.json
@@ -107,6 +107,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.0",
         "friendsofphp/php-cs-fixer": "3.48.*",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
