--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "softspring/symfonic-standalone",
     "description": "Symfonic Standalone",
     "type": "project",
-    "license": "AGPL-3.0",
+    "license": "AGPL-3.0-or-later",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
