Configure new 5.5 development version

--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
         "monolog/monolog": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
-        "softspring/cms-blog-plugin": "^5.4",
-        "softspring/cms-translation-plugin": "^5.4",
-        "softspring/symfonic": "^5.4",
-        "softspring/user-bundle": "^5.4",
+        "softspring/cms-blog-plugin": "^5.5@dev",
+        "softspring/cms-translation-plugin": "^5.5@dev",
+        "softspring/symfonic": "^5.5@dev",
+        "softspring/user-bundle": "^5.5@dev",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/doctrine-messenger": "7.1.*",
@@ -111,28 +111,28 @@
         "friendsofphp/php-cs-fixer": "3.48.*",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
-        "softspring/cms-blog-plugin": "5.4.x-dev",
-        "softspring/cms-bundle": "5.4.x-dev",
-        "softspring/cms-module-collection": "5.4.x-dev",
-        "softspring/cms-translation-plugin": "5.4.x-dev",
-        "softspring/collection-form-type": "5.4.x-dev",
-        "softspring/components": "5.4.x-dev",
-        "softspring/crudl-controller": "5.4.x-dev",
-        "softspring/doctrine-migrations-version-comparator": "5.4.x-dev",
-        "softspring/doctrine-paginator": "5.4.x-dev",
-        "softspring/doctrine-query-filters": "5.4.x-dev",
-        "softspring/doctrine-target-entity-resolver": "5.4.x-dev",
-        "softspring/dynamic-form-type": "5.4.x-dev",
-        "softspring/events": "5.4.x-dev",
-        "softspring/media-bundle": "5.4.x-dev",
-        "softspring/mime-translatable": "5.4.x-dev",
-        "softspring/permissions-bundle": "5.4.x-dev",
-        "softspring/polymorphic-form-type": "5.4.x-dev",
-        "softspring/symfonic": "5.4.x-dev",
-        "softspring/time-ago-bundle": "5.4.x-dev",
-        "softspring/translatable-bundle": "5.4.x-dev",
-        "softspring/twig-extra-bundle": "5.4.x-dev",
-        "softspring/user-bundle": "5.4.x-dev",
+        "softspring/cms-blog-plugin": "^5.5@dev",
+        "softspring/cms-bundle": "^5.5@dev",
+        "softspring/cms-module-collection": "^5.5@dev",
+        "softspring/cms-translation-plugin": "^5.5@dev",
+        "softspring/collection-form-type": "^5.5@dev",
+        "softspring/components": "^5.5@dev",
+        "softspring/crudl-controller": "^5.5@dev",
+        "softspring/doctrine-migrations-version-comparator": "^5.5@dev",
+        "softspring/doctrine-paginator": "^5.5@dev",
+        "softspring/doctrine-query-filters": "^5.5@dev",
+        "softspring/doctrine-target-entity-resolver": "^5.5@dev",
+        "softspring/dynamic-form-type": "^5.5@dev",
+        "softspring/events": "^5.5@dev",
+        "softspring/media-bundle": "^5.5@dev",
+        "softspring/mime-translatable": "^5.5@dev",
+        "softspring/permissions-bundle": "^5.5@dev",
+        "softspring/polymorphic-form-type": "^5.5@dev",
+        "softspring/symfonic": "^5.5@dev",
+        "softspring/time-ago-bundle": "^5.5@dev",
+        "softspring/translatable-bundle": "^5.5@dev",
+        "softspring/twig-extra-bundle": "^5.5@dev",
+        "softspring/user-bundle": "^5.5@dev",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
         "symfony/debug-bundle": "7.1.*",
