rename to Armonic

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@popperjs/core": "^2.11.8",
         "@softspring/cms-bundle": "file:vendor/softspring/cms-bundle/assets",
         "@softspring/cms-module-collection": "file:vendor/softspring/cms-module-collection/assets",
         "@softspring/collection-form-type": "file:vendor/softspring/collection-form-type/assets",
         "@softspring/media-bundle": "file:vendor/softspring/media-bundle/assets",
-        "@softspring/translatable-bundle": "file:vendor/softspring/translatable-bundle/assets",
         "@softspring/polymorphic-form-type": "file:vendor/softspring/polymorphic-form-type/assets",
+        "@softspring/translatable-bundle": "file:vendor/softspring/translatable-bundle/assets",
         "@symfony/webpack-encore": "^4.6.1",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.11.2",
