--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "softspring/symfonic-standalone",
-    "description": "Symfonic Standalone",
+    "name": "softspring/armonic-standalone",
+    "description": "Armonic Standalone",
     "type": "project",
     "license": "AGPL-3.0-or-later",
     "minimum-stability": "dev",
@@ -20,7 +20,7 @@
         "phpstan/phpdoc-parser": "^1.25",
         "softspring/cms-blog-plugin": "^5.5@dev",
         "softspring/cms-translation-plugin": "^5.5@dev",
-        "softspring/symfonic": "^5.5@dev",
+        "softspring/armonic": "^5.5@dev",
         "softspring/user-bundle": "^5.5@dev",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
@@ -128,7 +128,7 @@
         "softspring/mime-translatable": "^5.5@dev",
         "softspring/permissions-bundle": "^5.5@dev",
         "softspring/polymorphic-form-type": "^5.5@dev",
-        "softspring/symfonic": "^5.5@dev",
+        "softspring/armonic": "^5.5@dev",
         "softspring/time-ago-bundle": "^5.5@dev",
         "softspring/translatable-bundle": "^5.5@dev",
         "softspring/twig-extra-bundle": "^5.5@dev",
